Add all JS, Now functioning
Add all JS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>🍅🍅Pomodoro Timer🍅🍅</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 
@@ -23,7 +25,7 @@
     <section id="session-label">Session Length</section>
     <div class="arrows">
         <section id="session-increment" onclick="sessionLengthUp()">&#x2191;</section>
-        <section id="session-length">5</section>
+        <section id="session-length">25</section>
         <section id="session-decrement" onclick="sessionLengthDown()">&#x2193;</section>
     </div>
   </div>
@@ -39,6 +41,8 @@
   <button id="reset" onclick="reset()">Reset</button>
 
   <audio id="beep" src=""></audio>
+
+  <script src="script.js"></script>
 
 </body>
 </html>
